--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-slider-component": "^4.1.0-beta.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
